align support text on review submission page (bug 821492)

--- a/media/css/mkt/ratings.less
+++ b/media/css/mkt/ratings.less
@@ -212,6 +212,9 @@ header.product {
     label[for=id_body], label[for=id_rating] {
         display: none;
     }
+    .errorlist {
+        max-width: 70%;
+    }
     .charlimit {
         font-size: 12px;
         margin: -9px 0 15px;
@@ -501,8 +504,9 @@ header.product {
         right: 10px;
     }
 }
+
 p.support-link {
     float: right;
     font-size: 13px;
-    margin-top: 48px;
+    margin: 15px 0 0;
 }
